# tee_tee_os_framework

./: .gitignore  Android.mk  BUILD.gn  Makefile  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  config.mk
test/xts/ca/: BUILD.gn  CMakeLists.txt  Test.json
trustedcore_hm/: .gitignore  Android.mk  CMakeLists.txt  Makefile  README.md  config.mk  config.sh  configure.sh  sign.sh
trustedcore_hm/apps/: CMakeLists.txt
trustedcore_hm/apps/antiroot/: CMakeLists.txt  Makefile
trustedcore_hm/apps/art/: CMakeLists.txt  Makefile
trustedcore_hm/apps/bdkernel/: CMakeLists.txt  Makefile
trustedcore_hm/apps/biometric/: CMakeLists.txt  Makefile
trustedcore_hm/apps/devchip_apps/: Makefile
trustedcore_hm/apps/file_encry/: CMakeLists.txt  Makefile
trustedcore_hm/apps/firmware_upgrade/: CMakeLists.txt  Makefile
trustedcore_hm/apps/hivcodec/: CMakeLists.txt  Makefile  manifest.txt
trustedcore_hm/apps/hivcodec_sr/: Makefile  manifest.txt
trustedcore_hm/apps/hsm/: CMakeLists.txt  Makefile
trustedcore_hm/apps/hsm_bbox/: CMakeLists.txt  Makefile
trustedcore_hm/apps/hsm_efuse/: CMakeLists.txt  Makefile
trustedcore_hm/apps/hsm_flash/: CMakeLists.txt  Makefile
trustedcore_hm/apps/hwsdp/: Makefile
trustedcore_hm/apps/include/: hsm_ta_public.h
trustedcore_hm/apps/kds/: CMakeLists.txt  Makefile
trustedcore_hm/apps/rot/: CMakeLists.txt  Makefile
trustedcore_hm/apps/rpmb_key/: CMakeLists.txt  Makefile
trustedcore_hm/apps/sec_flash/: CMakeLists.txt  Makefile
trustedcore_hm/apps/secboot/: CMakeLists.txt  Makefile
trustedcore_hm/apps/secisp/: CMakeLists.txt  Makefile  manifest.txt
trustedcore_hm/apps/secmem/: CMakeLists.txt  Makefile  manifest.txt
trustedcore_hm/apps/sem/: CMakeLists.txt  Makefile
trustedcore_hm/apps/vltmm_service/: CMakeLists.txt  Makefile
trustedcore_hm/cmake/: ItrusteeCommon.cmake  TeeCommon.cmake  apps_asan.cmake  apps_bootfs.cmake  apps_cfg.cmake  apps_common.cmake  apps_drv_flags.cmake  apps_ext_lib_common.cmake  apps_feature_macro.cmake  apps_lib_common.cmake  apps_nwe_flags.cmake  apps_plat.cmake  apps_sub_cfg.cmake  apps_subcommon.cmake  apps_svc_common.cmake  apps_svc_flags.cmake  apps_ta_common.cmake  apps_var_and_config.cmake  clean.sh  common.cmake  config_function.sh  cxx.cmake  flags.cmake  generate_bootfs.sh  kernel.cmake  libfuzzer_cflags.cmake  linker.lib.xom.ld  llvm_apps_cfi.cmake  parse_config_file.cmake  patch.sh  project.cmake  single_sec_modem.sh  subCommon.cmake  sub_common.cmake  ta_link.ld  ta_link_64.ld
trustedcore_hm/cmake/toolchains/: clang32_toolchain.cmake  clang32_toolchain_xom.cmake  clang64_toolchain.cmake  gcc64_toolchain.cmake
trustedcore_hm/drivers/common/: drv_call_check.c  drv_call_check.h  drv_pm_check.c  drv_pm_check.h
trustedcore_hm/drivers/drv_timer/: CMakeLists.txt  Makefile  linker.ld  linker.xom.ld  linker64.ld
trustedcore_hm/drivers/include/: README  boot_sharedmem.h  tee_driver_module.h
trustedcore_hm/drivers/platdrv/: CMakeLists.txt  Makefile  alias.txt  export.txt  linker.ld  linker.xom.ld  linker64.ld  platform
trustedcore_hm/drivers/tee_drv_server/: CMakeLists.txt  Makefile
trustedcore_hm/framework/: CMakeLists.txt
trustedcore_hm/framework/gtask/: CMakeLists.txt  Makefile
trustedcore_hm/framework/hmsysmgr/: CMakeLists.txt  Makefile
trustedcore_hm/framework/huk_service/: CMakeLists.txt  Makefile
trustedcore_hm/framework/permission_service/: CMakeLists.txt  Makefile
trustedcore_hm/framework/rpmb/: CMakeLists.txt  Makefile
trustedcore_hm/framework/se_service/: CMakeLists.txt  Makefile
trustedcore_hm/framework/ssa/: CMakeLists.txt  Makefile
trustedcore_hm/framework/tarunner/: CMakeLists.txt  Makefile
trustedcore_hm/framework/tcmgr_service/: CMakeLists.txt  Makefile
trustedcore_hm/framework/tui/: CMakeLists.txt  Makefile
trustedcore_hm/kernel/: CMakeLists.txt  Makefile  Makefile.libgic  Makefile.libuart  Makefile.libversion  clang-cpp  combine.ari  linker.lds  module.mk
trustedcore_hm/kernel/elfloader/: Makefile  gen_boot_function.sh  gen_boot_image.sh
trustedcore_hm/kernel/libgic/: gic_common.h  gic_v2.c  gic_v2.h  gic_v3.c  gic_v3.h
trustedcore_hm/kernel/libuart/: io_output.c  uart_register.c  uart_register.h
trustedcore_hm/kernel/libversion/: tee_version.c  tee_version.h
trustedcore_hm/libs/: CMakeLists.txt
trustedcore_hm/libs/libart/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libart_a32/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libbiometric/: CMakeLists.txt  Makefile  include  src
trustedcore_hm/libs/libbiometric_a32/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libchinadrm/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libchinadrm_a32/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libmspcore/: CMakeLists.txt  Makefile  include  src
trustedcore_hm/libs/libmspcore_a32/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libramfs_host/: CMakeLists.txt  LICENSE.txt  Makefile
trustedcore_hm/libs/librot/: CMakeLists.txt  Makefile  include  src
trustedcore_hm/libs/librot_a32/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libsec_flash_client/: CMakeLists.txt  Makefile  include  src
trustedcore_hm/libs/libsec_flash_client_a32/: CMakeLists.txt  Makefile
trustedcore_hm/libs/libsec_modem/: CMakeLists.txt  Makefile  sec_modem.mk  (+1 more)
trustedcore_hm/mk/: arch_config.mk  asan.mk  bootfs.mk  cfg.mk  common.mk  cxx.mk  drv-common.mk  drv-flags.mk  ext_lib-common.mk  feature-macro.mk  lib-common.mk  libfuzzer_cflags.mk  linker.xom.ld  llvm-apps-cfi.mk  llvm-apps-xom.mk  nwe-flags.mk  plat.mk  product-flags.mk  project.mk  rule.mk  svc-flags.mk  ta-common.mk  ta_link.ld  ta_link_64.ld  ta_link_new.ld  ta_link_new.xom.ld  teeos-flags.mk  toolchain.mk  var.mk
trustedcore_hm/prebuild/: toolchains
trustedcore_hm/sys_apps/: CMakeLists.txt
trustedcore_hm/sys_libs/: CMakeLists.txt
trustedcore_hm/tools/: check-syms.sh  elf_extract.c  encry_rsa_key.py  gen_boot_function.sh  gen_boot_image.sh  generate_ecc_pub.py  header.py  header_kunpeng.py  header_mtk.py  header_router.py  image_encry.py  pack_key.py  packimg.sh  smart-strip.sh
(+5755 files in other folders)
