add_subdirectory(antiroot)
add_subdirectory(art)
add_subdirectory(bdkernel)
add_subdirectory(biometric)
add_subdirectory(file_encry)
add_subdirectory(firmware_upgrade)
add_subdirectory(hivcodec)
add_subdirectory(hsm)
add_subdirectory(hsm_bbox)
add_subdirectory(hsm_efuse)
add_subdirectory(kds)
add_subdirectory(rot)
add_subdirectory(rpmb_key)
add_subdirectory(secboot)
add_subdirectory(secisp)
add_subdirectory(secmem)
add_subdirectory(sec_flash)
add_subdirectory(sem)
add_subdirectory(vltmm_service)
add_subdirectory(hsm_flash)
