add_subdirectory(gtask)
add_subdirectory(huk_service)
add_subdirectory(permission_service)
add_subdirectory(rpmb)
add_subdirectory(se_service)
add_subdirectory(ssa)
add_subdirectory(tarunner)
add_subdirectory(hmsysmgr)
if ("${CONFIG_REMOTE_ATTESTATION_64BIT}" STREQUAL "true" OR "${CONFIG_REMOTE_ATTESTATION_32BIT}" STREQUAL "true")
    add_subdirectory(tcmgr_service)
endif()
if ("${CONFIG_TUI_64BIT}" STREQUAL "true")
    add_subdirectory(tui)
endif()
