add_subdirectory(libart)
add_subdirectory(libart_a32)
add_subdirectory(libbiometric)
add_subdirectory(libbiometric_a32)
add_subdirectory(libchinadrm)
add_subdirectory(libchinadrm_a32)
add_subdirectory(libmspcore)
add_subdirectory(libmspcore_a32)
add_subdirectory(librot)
add_subdirectory(librot_a32)
if (NOT "${PLATFORM_NAME}" STREQUAL "mtk")
    add_subdirectory(libsec_flash_client)
    add_subdirectory(libsec_flash_client_a32)
endif()
add_subdirectory(libvltmm)
add_subdirectory(libvltmm_a32)
add_subdirectory(libweaver)
add_subdirectory(libweaver_a32)
add_subdirectory(libthp_afe)
add_subdirectory(libthp_afe_3660_6250)
add_subdirectory(libthp_afe_710)
add_subdirectory(libthp_afe_970)
add_subdirectory(libthp_afe_990)
add_subdirectory(libthp_afe_baltimore)
add_subdirectory(libthp_afe_baltimore_a32)
add_subdirectory(libthp_afe_denver)
add_subdirectory(libthp_afe_orlando)
add_subdirectory(libramfs_host)
add_subdirectory(libvfs_host)
add_subdirectory(ramfsdump_host)
add_subdirectory(ramfsmkimg_host)
