add_subdirectory(libteeconfig)
add_subdirectory(libtimer)
add_subdirectory(libac_policy)
add_subdirectory(libccmgr)
add_subdirectory(libcrypto_hal)
add_subdirectory(libswcrypto_engine)
add_subdirectory(libdrv_frame)
add_subdirectory(libdynconfbuilder)
add_subdirectory(libdynconfmgr)
add_subdirectory(libhmdrv_stub)
add_subdirectory(libteeagentcommon)
add_subdirectory(libteeagentcommon_client)
add_subdirectory(libgm_shared)
add_subdirectory(libtee_shared)
add_subdirectory(libbase_shared)
add_subdirectory(libtui_internal_shared)
add_subdirectory(libdrv_shared)
add_subdirectory(libspawn_common)
add_subdirectory(libelf_verify_key)
add_subdirectory(libtee_cmscbb)
add_subdirectory(libteedynsrv)
